# model_monitoring_evidently

./: README.md  pyproject.toml
reports/: classification_performance_report.html  classification_performance_report_preset.html  classification_report.html  column_metrics_report_custom.html  data_drift_custom_metric_table.html  data_drift_metric.html  data_drift_metric_education_col.html  data_drift_metric_table.html  data_quality_preset_tests.html  data_quality_report.html  data_quality_report_preset.html  data_quality_tests.html  embeddings_drift_report_small_subset.html  embeddings_drift_report_wasserstein.html  embeddings_drift_report_wasserstein_dataset.html  regression_report.html  test_overview_descriptors.html
