[tool.poetry]
name = "model-monitoring"
version = "0.1.0"
description = ""
authors = ["Pedro Alves <pedroalves0409@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
evidently = "^0.4.9"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
